--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
   line-height: 1.4;
 }
 
-#project-process, #proj-overview, #masterhead, .welcome_box {
+#project-process, #proj-overview, .welcome_box {
   margin-right: 4.8rem;
 }
 
@@ -31,11 +31,21 @@ p {
 /* - - - - NAV - - - - */
 #masterhead {
   border-bottom: 2px solid;
-  padding-bottom: 3rem;
-  margin-top: 2rem;
-  margin-left: 0rem;
-  margin-right: 0rem;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+  position: fixed;
+  top:0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  background-color: '#fefefe';
 }
+
+#masterhead-space {
+  position: relative;
+  height: 8rem;
+}
+
 #masterhead #home-button {
   float: left;
   padding-left: 2.2rem;
@@ -119,24 +129,25 @@ p {
 }
 
 /*   - - - - ABOUT ME   - - - - */
-.grey-box-contact {
-  background-color: #efefef;
-}
 
-.profile-intro, .contact-intro {
-  position: static;
-  padding-top: 3rem;
-  top: 41rem;
+.profile-box {
+  background-color: #efefef;
+  padding-top: 0.5em;
+  clear: left;
 }
-.profile-intro p, .contact-intro p {
+ 
+/*  padding-top: 2.5rem;*/
+
+
+.contact-intro {
+  position: static;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.contact-intro p {
   width: 20rem;
   padding-bottom: 1rem;
   margin: auto;
-}
-
-.contact-intro {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 
 .icon {
@@ -147,11 +158,7 @@ p {
   width: 20%;
 }
 
-.profile-box {
-  height: 22rem;
-  overflow: hidden;
-}
-.profile-box .profile1, .profile-box .profile2 {
+.profile1, .profile2 {
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 50%;
@@ -162,23 +169,19 @@ p {
   margin-right: auto;
   margin-left: auto;
 }
-.profile-box .profile1 {
+
+.profile1 {
   background-image: url(../img/profile1.jpg);
   background-size: 110%;
   border: 5px solid red;
   margin-top: 2rem;
 }
-.profile-box .profile2 {
+.profile2 {
   background-image: url(../img/profile2.jpg);
   background-size: 120%;
   border: 5px solid darkblue;
-  margin-top: 8.5rem;
-  margin-bottom: 5rem;
 }
 
-.grey-box-contact {
-  height: 22.5rem;
-}
 
 form {
   width: 80%;
@@ -239,7 +242,7 @@ form .form-button {
     margin-left: 2rem;
     margin-right: 2rem;
   }
-  #masterhead #home-button {
+  #masterhead, #home-button {
     visibility: visible;
     position: absolute;
   }
@@ -280,11 +283,11 @@ form .form-button {
     width: 12rem;
   }
 
-  .profile-intro, .contact-intro {
+  .contact-intro {
     position: static;
     top: 35rem;
   }
-  .profile-intro p, .contact-intro p {
+  .contact-intro p {
     width: 24rem;
   }
 
@@ -302,39 +305,34 @@ form .form-button {
     font-size: 14px;
   }
 
-  .profile {
-    width: 18rem;
-    height: 18rem;
-    float: left;
-    margin-left: 12rem;
-  }
-
-  .profile-intro, .contact-intro {
+  .contact-intro {
     float: left;
     margin-left: 5rem;
-  }
-
-  .contact-intro {
     padding-top: 0rem;
     padding-bottom: 2rem;
   }
 
-  .icon {
+  .profile1, .profile2 {
     float: left;
-    margin: auto;
-    width: 27rem;
-    padding-left: 8rem;
+    margin-left: 5rem;
   }
 
-  .grey-box-contact {
-    height: 26rem;
+  .icon {
+    float: left;
+    width: 19.2rem;
+    margin-left: 5rem;
+  }
+
+  .profile-box {
+    margin-left: 10vw;
+    margin-right: 10vw;
   }
 
   #masterhead {
     margin-left: 2rem;
     margin-right: 2rem;
   }
-  #masterhead #home-button a, #masterhead #home-button span {
+  #masterhead #home-button a, #home-button span {
     visibility: visible;
     position: relative;
   }
@@ -343,15 +341,6 @@ form .form-button {
     font: italic bold 80px Georgia, Serif;
   }
 
-  .profile-box {
-    float: left;
-    padding-left: 8rem;
-    overflow: visible;
-  }
-
-  .profile-intro > div {
-    padding-bottom: 7rem;
-  }
 
   .pages {
     padding-left: 2.5rem;
