--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,6 @@ body {
   line-height: 1.4;
 }
 
-#project-process, #proj-overview, .welcome_box {
-  margin-right: 4.8rem;
-}
-
 /* - - - - TEXT - - - - */
 #home-button, ul, h1, h2, h3 {
   font-family: 'Lato', sans-serif;
@@ -38,7 +34,7 @@ p {
   left: 0;
   right: 0;
   z-index: 9999;
-  background-color: '#fefefe';
+  background-color: #fff;
 }
 
 #masterhead-space {
@@ -103,9 +99,18 @@ p {
 }
 
 /* - - - - HOMEPAGE - - - - */
+
 .welcome_box h1 {
-  font: italic bold 50px Georgia, Serif;
-  padding-top: 5rem;
+  font: italic bold Georgia, Serif;
+  padding-top: 21vh;
+  padding-bottom: 21vh;
+  text-align: center;
+}
+
+.fa-angle-down {
+  font-size: 7rem;
+  margin-left: 48%;
+  padding-bottom: 2rem;
 }
 
 /*  - - - - PORTFOLIO PAGES  - - - - */
@@ -144,7 +149,7 @@ p {
 .ellipse {
     position: absolute;
     background: radial-gradient(ellipse, transparent, transparent 10px, black 10px, black 15px, transparent 15px);
-    background-size: 49px 40px;
+    background-size: 48px 40px;
     width: 100%;
     height: 19px;
     top: 11px;
@@ -153,7 +158,7 @@ p {
 
 .ellipse2 {
     top: 29px;
-    background-position: 26px -23px;
+    background-position: 25px -23px;
     left: -18px;
 }
 
@@ -314,7 +319,7 @@ form .form-button {
     top: 35rem;
   }
   .contact-intro p {
-    width: 24rem;
+    width: 28rem;
   }
 
   .icon {
@@ -338,8 +343,14 @@ form .form-button {
     padding-bottom: 2rem;
   }
 
+  .contact-intro p {
+    width: 29rem;
+  }
+
   .profile1, .profile2 {
+    margin-top: 0px;
     float: left;
+    clear: left;
     margin-left: 20%;
   }
 
