--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,10 @@ p {
   margin-bottom: 1rem;
 }
 
+#portfolio-page p {
+  padding-bottom: 1.5rem;
+}
+
 /*   - - - - ABOUT ME   - - - - */
  
 /* squiggle */
